[gd_scene load_steps=4 format=2]

[ext_resource path="res://Assets/Top-down Tanks/Spritesheet/onlyObjects_default.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Bala.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 4, 7 )

[node name="Bala" type="Area2D"]
position = Vector2( 8, 16 )
rotation = 1.5708
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 72, 176, 8, 14 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -2.86102e-06, 0 )
shape = SubResource( 1 )

[node name="KillTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[connection signal="body_entered" from="." to="." method="_on_Bala_body_entered"]
[connection signal="timeout" from="KillTimer" to="." method="_on_KillTimer_timeout"]
